stop screen overflowing on mobile, #657

--- a/src/scss/blocks/_content.scss
+++ b/src/scss/blocks/_content.scss
@@ -31,7 +31,7 @@
   box-shadow: 0px 11px 70px 12px rgba(0, 0, 0, 0.04);
 
   &--login {
-    width: 28rem;
+    max-width: 28rem;
     background-color: $white-75;
     position: absolute;
     top: 50%;
